[package]
name = "facts"
version = "0.1.0"
authors = ["Hannes Karppila <hannes.karppila@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

strum = "0.18.0"
strum_macros = "0.18.0"

structopt = { version = "^0.3.12", features = [ "paw" ] }
paw = "1.0"

log = "0.4"
env_logger = "0.7.1"

lazy_static = "1.4.0"
regex = "1.3.5"

app_dirs = "^1.2"
nix = "0.17.0"
ctrlc = "3.1.4"

reqwest = { version = "0.10", features = ["json", "blocking"] }
scraper = "0.11.0"

tar = "0.4.26"
xz2 = "0.1.6"

crossbeam-channel = "0.4.2"